# AgentDesktop

./: .env  .gitignore  README.md  reqs.txt  setup_benchmark.sh
adt/: agent.py  agent_func.py  main.py  vdesktop.py
data/: .gitignore  Data.md  assign_semantic_head.py  collect.py  debug_imports.py  pyproject.toml  requirements.txt  software.csv  visualize.py
data/interfaces/: android.py  base.py  ios.py  macos.py  web.py  windows.py
documents/: .gitignore  ADP-Software-Arch.ai  aim.tex
eval/: benchmark.py
gca/: .gitignore  README.md  dataset_uivision.py  inference.py  layers.py  losses.py  models.py  pyproject.toml  structures.py  system.py  test_dataset.py  train_gca.py  training.py
gca/src/gca/: __init__.py
model/: .gitignore  datageneration_grid.py  inference.py  training_grid.py
model/data/: labels.csv
model/data_grid/: labels.csv
software/adp-hostclient/: Cargo.toml  README.md
software/adp-hostclient/src/: input.rs  main.rs  screen.rs
