[project]
name = "gca"
version = "0.1.0"
description = "GCA Model for UI Vision"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "pillow",
    "datasets",
    "huggingface_hub",
    "tqdm"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
